--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                     <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                     <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
                                 </div>
-                                <a class="h5" href="">Web design & development courses for beginner</a>
+                                <a class="h5" href="">Lorem ipsum dolor sit amet consectetur</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5
@@ -275,7 +275,7 @@
                                     <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                     <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
                                 </div>
-                                <a class="h5" href="">Web design & development courses for beginner</a>
+                                <a class="h5" href="">Lorem ipsum dolor sit amet consectetur</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5
@@ -294,7 +294,7 @@
                                     <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                     <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
                                 </div>
-                                <a class="h5" href="">Web design & development courses for beginner</a>
+                                <a class="h5" href="">Lorem ipsum dolor sit amet consectetur</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5
@@ -313,7 +313,7 @@
                                     <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                     <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
                                 </div>
-                                <a class="h5" href="">Web design & development courses for beginner</a>
+                                <a class="h5" href="">Lorem ipsum dolor sit amet consectetur</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5
@@ -332,7 +332,7 @@
                                     <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                     <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
                                 </div>
-                                <a class="h5" href="">Web design & development courses for beginner</a>
+                                <a class="h5" href="">Lorem ipsum dolor sit amet consectetur</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5
@@ -351,7 +351,7 @@
                                     <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                     <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
                                 </div>
-                                <a class="h5" href="">Web design & development courses for beginner</a>
+                                <a class="h5" href="">Lorem ipsum dolor sit amet consectetur</a>
                                 <div class="border-top mt-4 pt-4">
                                     <div class="d-flex justify-content-between">
                                         <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5
